zerowaste-api/src/main/java/com/example/zerowaste_api/common/error/BrowseErrorConstant.java
package com.example.zerowaste_api.common.error;

public class BrowseErrorConstant {
    public static final String BROWSE_FOOD_ITEM_NOT_FOUND = "browseFoodItem.notFound";
    public static final String BROWSE_FOOD_ITEM_INVALID_REQUEST = "browseFoodItem.invalid.request";
}
